crates/math-core/tests/snapshots/wiki_test__wiki084.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Leftrightarrow, \\nLeftrightarrow, \\Longleftrightarrow, \\iff"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">⇔</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇎</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">⟺</mo>
    <mo>,</mo>
    <mspace width="0.2777778em"/>
    <mo stretchy="false" lspace="0" rspace="0">⟺</mo>
    <mspace width="0.2777778em"/>
</math>
