crates/math-core/tests/snapshots/wiki_test__wiki085.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Uparrow, \\Downarrow, \\Updownarrow"
---
<math>
    <mo stretchy="false">⇑</mo>
    <mo>,</mo>
    <mo stretchy="false">⇓</mo>
    <mo>,</mo>
    <mo stretchy="false">⇕</mo>
</math>
