crates/math-core/tests/snapshots/wiki_test__wiki089.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\leftrightarrow, \\nleftrightarrow, \\longleftrightarrow"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">↔</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">↮</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">⟷</mo>
</math>
