crates/math-core/tests/snapshots/wiki_test__wiki093.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\rightharpoonup \\rightharpoondown \\leftharpoonup \\leftharpoondown \\upharpoonleft \\upharpoonright \\downharpoonleft \\downharpoonright \\rightleftharpoons \\leftrightharpoons"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">⇀</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇁</mo>
    <mo stretchy="false" lspace="0" rspace="0">↼</mo>
    <mo stretchy="false" lspace="0" rspace="0">↽</mo>
    <mo stretchy="false" lspace="0" rspace="0">↿</mo>
    <mo stretchy="false" lspace="0" rspace="0">↾</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇃</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇂</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇌</mo>
    <mo stretchy="false" lspace="0" rspace="0">⇋</mo>
</math>
